Added list items to sidebar and header

--- a/index.html
+++ b/index.html
@@ -10,10 +10,31 @@
 <body>
   <div class="wrapper">
     <div class="sidebar">
-
+      <h1>Dashboard</h1>
+      <br>
+      <ul>
+        <li class="sidebar-item" id="sidebar-1">Home</li>
+        <li class="sidebar-item" id="sidebar-2">Profile</li>
+        <li class="sidebar-item" id="sidebar-3">Messages</li>
+        <li class="sidebar-item" id="sidebar-4">History</li>
+        <li class="sidebar-item" id="sidebar-5">Tasks</li>
+        <li class="sidebar-item" id="sidebar-6">Communities</li>
+      <br>
+        <li class="sidebar-item" id="sidebar-7">Settings</li>
+        <li class="sidebar-item" id="sidebar-8">Support</li>
+        <li class="sidebar-item" id="sidebar-9">Privacy</li>
+      </ul>
     </div>
     <div class="header">
-
+      <ul>
+        <li class="header-item" id="header-1"><a href="#">New</a></li>
+        <li class="header-item" id="header-2"><a href="#">Upload</a></li>
+        <li class="header-item" id="header-3"><a href="#">Share</a></li>
+        <li class="header-item" id="header-4"><input></input></li>
+        <li class="header-item" id="header-5"><a href="#">Notifications</a></li>
+        <li class="header-item" id="header-6"><a href="#">Username</a></li>
+        <li class="header-item" id="header-7"><a href="#">Pfp</a></li>
+      </ul>
     </div>
     <div class="main-content">
       
