--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="./css/style.css">
+  <script src="https://kit.fontawesome.com/04b902723f.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -27,14 +28,15 @@
     </div>
     <div class="header">
       <ul class="header-list">
-        <div class="nav-div-1">
+        <div class="nav-div-1 nav-div">
           <li class="header-item" id="header-1"><input placeholder="Search"></input></li>
-          
-          <li class="header-item" id="header-2"><a href="#">Notifications</a></li>
-          <li class="header-item" id="header-3"><a href="#">Username</a></li>
+        </div>
+        <div class="nav-div-2 nav-div">
+          <li class="header-item" id="header-2"><a href="#"><i class="fa-regular fa-bell"></i></a></li>
+          <li class="header-item" id="header-3"><a href="#"><b>joel1508</b></a></li>
           <li class="header-item" id="header-4"><a href="#">Pfp</a></li>
         </div>
-        <div class="nav-div-2">
+        <div class="nav-div-3 nav-div">
           <li class="header-item" id="header-5"><a href="#">New</a></li>
           <li class="header-item" id="header-6"><a href="#">Upload</a></li>
           <li class="header-item" id="header-7"><a href="#">Share</a></li>
