main content area updated

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
   <div class="wrapper">
     <div class="sidebar">
-      <h1>Dashboard</h1>
+      <h1 id="sidebar-title">Dashboard</h1>
       <br>
       <ul class="sidebar-list">
-        <li class="sidebar-item" id="sidebar-1"><a href="">Home</a></li>
-        <li class="sidebar-item" id="sidebar-2"><a href="">Profile</a></li>
-        <li class="sidebar-item" id="sidebar-3"><a href="">Messages</a></li>
-        <li class="sidebar-item" id="sidebar-4"><a href="">History</a></li>
-        <li class="sidebar-item" id="sidebar-5"><a href="">Tasks</a></li>
-        <li class="sidebar-item" id="sidebar-6"><a href="">Communites</a></li>
+        <li class="sidebar-item" id="sidebar-1"><a href=""><i class="fa-solid fa-house"></i> Home</a></li>
+        <li class="sidebar-item" id="sidebar-2"><a href=""><i class="fa-solid fa-user"></i> Profile</a></li>
+        <li class="sidebar-item" id="sidebar-3"><a href=""><i class="fa-solid fa-message"></i> Messages</a></li>
+        <li class="sidebar-item" id="sidebar-4"><a href=""><i class="fa-solid fa-clock"></i> History</a></li>
+        <li class="sidebar-item" id="sidebar-5"><a href=""><i class="fa-solid fa-list-check"></i> Tasks</a></li>
+        <li class="sidebar-item" id="sidebar-6"><a href=""><i class="fa-solid fa-people-group"></i> Communites</a></li>
         <br>
-        <li class="sidebar-item" id="sidebar-7"><a href="">Settings</a></li>
-        <li class="sidebar-item" id="sidebar-8"><a href="">Support</a></li>
-        <li class="sidebar-item" id="sidebar-9"><a href="">Privacy</a></li>
+        <li class="sidebar-item" id="sidebar-7"><a href=""><i class="fa-solid fa-gear"></i> Settings</a></li>
+        <li class="sidebar-item" id="sidebar-8"><a href=""><i class="fa-solid fa-circle-question"></i> Support</a></li>
+        <li class="sidebar-item" id="sidebar-9"><a href=""><i class="fa-solid fa-lock"></i> Privacy</a></li>
       </ul>
     </div>
     <div class="header">
@@ -34,7 +34,7 @@
         <div class="nav-div-2 nav-div">
           <li class="header-item" id="header-2"><a href="#"><i class="fa-regular fa-bell"></i></a></li>
           <li class="header-item" id="header-3"><a href="#"><b>joel1508</b></a></li>
-          <li class="header-item" id="header-4"><a href="#">Pfp</a></li>
+          <li class="header-item" id="header-4"><a href="#"><img src="./assets/istockphoto-1337144146-612x612.jpg" alt="pfp"></a></li>
         </div>
         <div class="nav-div-3 nav-div">
           <li class="header-item" id="header-5"><a href="#">New</a></li>
@@ -43,8 +43,24 @@
         </div>
       </ul>
     </div>
-    <div class="main-content">
-      
+    <div class="main-content-container">
+      <div class="projects">
+        <div class="project-panel"><b>Project 1</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 2</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 3</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 4</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 5</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 6</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 7</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 8</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 9</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-panel"><b>Project 10</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+      </div>
+      <div class="announcements">
+        <div class="announcement-panel">one</div>
+        <div class="announcement-panel">two</div>
+        <div class="announcement-panel">three</div>
+      </div>
     </div>
   </div>  
 </body>
