project cards added to main content area

--- a/index.html
+++ b/index.html
@@ -45,16 +45,116 @@
     </div>
     <div class="main-content-container">
       <div class="projects">
-        <div class="project-panel"><b>Project 1</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 2</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 3</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 4</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 5</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 6</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 7</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 8</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 9</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
-        <div class="project-panel"><b>Project 10</b><br><i>Project sample text project sample text project sample text.</i><i></i><i></i><i></i></div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 4</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 5</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 6</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 7</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 8</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 9</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div>
+            <h2>Project Title 10</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="card-buttons">
+              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="announcements">
         <div class="announcement-panel">one</div>
