colour scheme change

--- a/index.html
+++ b/index.html
@@ -45,118 +45,142 @@
     </div>
     <div class="main-content-container">
       <div class="projects">
+        <div class="projects-header"><h1>Your projects</h1></div>
         <div class="project-card">
           <div>
-            <h2>Project Title 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 1</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 2</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 3</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 4</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 4</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 5</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 5</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 6</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 6</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 7</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 7</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 8</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 8</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 9</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 9</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
         <div class="project-card">
           <div>
-            <h2>Project Title 10</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="project-text-container">
+              <h2>Project Title 10</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
             <div class="card-buttons">
-              <div class="card-fav"><i class="fa-regular fa-star"></i></div>
-              <div class="card-view"><i class="fa-regular fa-eye"></i></div>
-              <div class="card-share"><i class="fa-solid fa-share"></i></div>
+              <div class="card-fav card-button"><i class="fa-regular fa-star"></i></div>
+              <div class="card-view card-button"><i class="fa-regular fa-eye"></i></div>
+              <div class="card-share card-button"><i class="fa-solid fa-share"></i></div>
             </div>
           </div>
         </div>
       </div>
       <div class="announcements">
+        <h2 class="announcements-header">
+          Announcements
+        </h2>
         <div class="announcement-panel">one</div>
         <div class="announcement-panel">two</div>
         <div class="announcement-panel">three</div>
