--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="main-content-container">
       <div class="projects">
         <div class="projects-header"><h1>Your projects</h1></div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 1</h2>
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 2</h2>
@@ -72,7 +72,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 3</h2>
@@ -85,7 +85,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 4</h2>
@@ -98,7 +98,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 5</h2>
@@ -111,7 +111,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 6</h2>
@@ -124,7 +124,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 7</h2>
@@ -137,7 +137,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 8</h2>
@@ -150,7 +150,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 9</h2>
@@ -163,7 +163,7 @@
             </div>
           </div>
         </div>
-        <div class="project-card">
+        <div class="project-card card">
           <div>
             <div class="project-text-container">
               <h2>Project Title 10</h2>
